--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,6 +11,19 @@ pipeline {
             }
         }
         
+        stage('Backup') {
+            when {
+                expression { currentBuild.resultIsBetterOrEqualTo('SUCCESS') }
+            }
+            steps {
+                echo '====start creating backup===='
+                script {
+                   sh 'mkdir -p /var/lib/jenkins/workspace/Staging/backup-directory'
+                }
+                sh 'docker save app -o /var/lib/jenkins/workspace/Staging/backup-directory/app-artifact.tar'
+                echo '====backup completed===='
+            }
+        }
         
     }
 }
