--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -25,5 +25,15 @@ pipeline {
             }
         }
         
+        
+        stage('Deploy') {
+            when {
+                expression { currentBuild.resultIsBetterOrEqualTo('SUCCESS') }
+            }
+            steps {
+                echo '====start deploying application===='
+                sh 'docker run -d -p 5000:5000 app'
+            }
+        }
     }
 }
