--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                echo '===start building image==='
+                echo 'start building'
                 dir('./') {
                     sh 'docker build -t app .'
                 }
@@ -16,12 +16,12 @@ pipeline {
                 expression { currentBuild.resultIsBetterOrEqualTo('SUCCESS') }
             }
             steps {
-                echo '===start creating backup==='
+                echo 'creating backup'
                 script {
                    sh 'mkdir -p /var/lib/jenkins/workspace/Staging/backup-directory'
                 }
                 sh 'docker save app -o /var/lib/jenkins/workspace/Staging/backup-directory/app-artifact.tar'
-                echo '==backup completed=='
+                echo 'backup completed'
             }
         }
         
@@ -31,7 +31,7 @@ pipeline {
                 expression { currentBuild.resultIsBetterOrEqualTo('SUCCESS') }
             }
             steps {
-                echo '====start deploying application===='
+                echo 'start deploying application'
                 sh 'docker run -d -p 5000:5000 app'
             }
         }
